Refactor package name and update example usage in documentation. Changed package name from @gsc/axios-logger-client to axios-logger-client. Updated import statements and example code in example.ts, README.md, and PUBLISH.md for consistency.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gsc/axios-logger-client",
+  "name": "axios-logger-client",
   "version": "1.0.0",
   "description": "Axios HTTP client with optional request/response logging and sensitive data removal",
   "main": "dist/index.js",
@@ -35,4 +35,3 @@
     "README.md"
   ]
 }
-
