Rename package from axios-logger-client to trix-http and update related documentation. Adjusted example.ts, README.md, and PUBLISH.md to reflect the new package name and installation instructions.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "axios-logger-client",
-  "version": "1.0.1",
+  "name": "trix-http",
+  "version": "1.0.0",
   "description": "Axios HTTP client with optional request/response logging",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
